/* groovylint-disable-next-line CompileStatic */
plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.6'
    id "com.github.ben-manes.versions" version "0.42.0"
}

group = 'jp.vemi'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.MICROSOFT
        implementation = JvmImplementation.VENDOR_SPECIFIC
    }
}

repositories {
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
    maven { url 'https://adoptopenjdk.jfrog.io/adoptopenjdk' }
    maven { url 'https://packages.adoptium.net/artifactory/api/maven/adoptium' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-batch:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-cache:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-groovy-templates:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-mail:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-quartz:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-security:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf:3.3.0'
    implementation 'org.springframework.boot:spring-boot-starter-web:3.3.0'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server:6.4.0-RC1'
    implementation 'org.springframework.security:spring-security-oauth2-jose:6.4.0-RC1'
    implementation 'org.springframework.session:spring-session-jdbc'
    implementation 'com.h2database:h2:2.1.214'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'org.apache.poi:poi:5.2.3'
    implementation('org.apache.poi:poi-ooxml:5.2.3') {
        exclude group: 'stax', module: 'stax-api'
    }
    implementation 'commons-io:commons-io:2.11.0'
    implementation 'org.freemarker:freemarker:2.3.31'
    implementation 'com.codeborne:selenide:7.5.1'
    implementation 'org.hibernate.orm:hibernate-core:6.6.1.Final'
    implementation 'jakarta.servlet:jakarta.servlet-api:5.0.0'
    implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
    implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
    implementation 'javax.annotation:javax.annotation-api:1.3.2'
    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    runtimeOnly 'org.springframework.boot:spring-boot-starter-tomcat'
    runtimeOnly 'org.hibernate.validator:hibernate-validator:6.2.3.Final'
    runtimeOnly 'org.glassfish:javax.el:3.0.1-b11'
    runtimeOnly 'mysql:mysql-connector-java:8.0.33'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'io.projectreactor:reactor-test'
    testImplementation 'org.springframework.batch:spring-batch-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test:3.3.0'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

jar {
    archiveBaseName = 'mirelplatfrorm'
    archiveVersion = '1.0.0'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

tasks.withType(Test) {
    systemProperty 'file.encoding', 'UTF-8'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    enabled = false
}
